--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,11 @@
                     </a>
                 </div>
             </header>
-            <section class=" ">
-                <div class="max-w-[1240px] mx-auto px-5  text-center pt-24 mb-72 ">
+            <section class="w-full ">
+                <div class="max-w-[1240px] mx-auto px-5  text-center pt-24 mb-72 relative border-4 ">
+                    <div
+                        class="bg-ai-blue-blur -translate-x-1/2 -translate-y-1/2  w-72 h-72 absolute top-1/2 left-1/2 blur-pink">
+                    </div>
                     <p class="font-semibold text-base leading-5 text-white">Explore the power of AI</p>
                     <h1 class="font-semibold text-53 text-white opacity-90 mb-5"><strong class="font-extrabold">Power
                             up</strong> your business with AI</h1>
@@ -67,7 +70,10 @@
 
 
     <section class="pt-16 pb-28 bg-ai-custom-blue ">
-        <div class="max-w-[1240px] mx-auto px-5 ">
+
+        <div class="max-w-[1240px] mx-auto px-5 relative border-4">
+            <div class="bg-ai-blue-blur  w-72 h-72 absolute top-16 -left-96 blur-pink">
+            </div>
             <div class="text-center max-w-2xl mx-auto mb-20">
                 <h2 class="font-medium text-40  text-white opacity-90 mb-5  ">Focus on solving bigger problems</h2>
                 <p class="text-base text-white opacity-60 mb-10 ">Our expert AI consulting services will help you
@@ -109,7 +115,9 @@
 
 
     <section style="background-image: url('./img/section-bg.png');" class="bg-ai-custom-blue bg-cover  pt-20 pb-52  ">
-        <div class="max-w-[1240px] mx-auto px-5">
+        <div class="max-w-[1240px] mx-auto px-5 relative border-4">
+            <div class="bg-ai-pink-blur   w-72 h-72 absolute -top-24 -right-20  blur-pink z-0">
+            </div>
             <div class="text-center max-w-2xl mx-auto mb-16">
                 <h2 class="font-medium text-40 text-white opacity-90 mb-5  ">Use sensitive data without sacrificing
                     privacy</h2>
@@ -151,9 +159,14 @@
     </section>
 
 
-    <footer class="pb-24 pt-24 bg-ai-custom-blue ">
-        <div
-            class="max-w-[1240px] mx-auto mb-28 px-5 bg-contact-gradient rounded-xl pt-16 pl-24 pr-22 pb-16 flex items-center gap-4 justify-between -mt-64">
+    <footer class="pb-24 pt-24 bg-ai-custom-blue relative">
+      
+        <div class="max-w-[1240px] mx-auto  px-5 relative">
+            <div
+                class="bg-ai-blue-blur  w-72 h-72 absolute  -top-28 -right-64 blur-pink">
+            </div>
+        </div>
+        <div       class="max-w-[1240px] mx-auto mb-28 px-5 bg-contact-gradient rounded-xl pt-16 pl-24 pr-22 pb-16 flex items-center gap-4 justify-between -mt-64">
             <div class="">
                 <h3 class="font-semibold text-40 mb-2 text-white opacity-90 capitalize">Get started with Dojo AI</h3>
                 <p class="text-white opacity-60 text-base ">Schedule today a meeting to see how we can help deploy your
@@ -164,6 +177,7 @@
                 Us</a>
         </div>
         <div class="max-w-[1240px] mx-auto  pb-3 grid grid-cols-5">
+
             <img class="w-20" src="./img/footer-logo.png" alt="">
             <div class="">
                 <h3 class="text-sm text-white opacity-30 mb-5">Quick Links</h3>
@@ -195,9 +209,18 @@
 
             <form class="">
                 <label class="block text-white text-sm opacity-25 mb-4">Newsletter Signup</label>
-                <input class="block  w-64 py-2 px-5 rounded-full bg-transparent border border-ai-white-300 outline-none tetx-base leading-6 text-white text-ai-white-450 mb-5" type="email" placeholder="E-mail address">
-                <button class="border border-ai-white-300 leading-6   rounded-full text-white  bg-btn-gradient text-sm py-2 px-6">Sign up</button>
+                <input
+                    class="block  w-64 py-2 px-5 rounded-full bg-transparent border border-ai-white-300 outline-none tetx-base leading-6 text-white text-ai-white-450 mb-5"
+                    type="email" placeholder="E-mail address">
+                <button
+                    class="border border-ai-white-300 leading-6   rounded-full text-white  bg-btn-gradient text-sm py-2 px-6">Sign
+                    up</button>
             </form>
+        </div>
+        <div class="max-w-[1240px] mx-auto  px-5 relative">
+            <div
+                class="bg-ai-pink-blur  w-72 h-72 absolute  -bottom-42 -left-16 blur-pink">
+            </div>
         </div>
     </footer>
 
@@ -205,12 +228,12 @@
 
 
 
-    
-    <script src='https://jeromeetienne.github.io/threex.terrain/examples/vendor/three.js/build/three-min.js'></script>
+
+    <!-- <script src='https://jeromeetienne.github.io/threex.terrain/examples/vendor/three.js/build/three-min.js'></script>
     <script
         src='https://jeromeetienne.github.io/threex.terrain/examples/vendor/three.js/examples/js/SimplexNoise.js'></script>
     <script src='https://jeromeetienne.github.io/threex.terrain/threex.terrain.js'></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js"></script> -->
 
 </body>
 
