--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body class="overflow-x-hidden">
-    <div id="site-header" hidden class="h-screen relative overflow-hidden  bg-ai-custom-blue">
-        <div class="absolute  top-0 left-0  w-full z-50">
+    <div   class=" w-full overflow-hidden border-4  bg-ai-custom-blue">
+        <div class="  w-full z-50 bg-hero-bg ">
             <header class="py-6 w-full relative">
                 <div class="bg-ai-pink-blur -z-10 w-72 h-72 absolute top-0 right-0 blur-pink">
                 </div>
@@ -41,7 +41,7 @@
                     </a>
                 </div>
             </header>
-            <section class="w-full bg-hero-bg">
+            <section class="w-full ">
                 <div class="max-w-[1240px] mx-auto px-5  text-center pt-24 mb-72 relative  ">
                     <div
                         class="bg-ai-blue-blur -translate-x-1/2 -translate-y-1/2  w-72 h-72 absolute top-1/2 left-1/2 blur-pink -z-20">
@@ -275,10 +275,10 @@
 
 
 
-    <script src='https://jeromeetienne.github.io/threex.terrain/examples/vendor/three.js/build/three-min.js'></script>
+    <!-- <script src='https://jeromeetienne.github.io/threex.terrain/examples/vendor/three.js/build/three-min.js'></script>
     <script
         src='https://jeromeetienne.github.io/threex.terrain/examples/vendor/three.js/examples/js/SimplexNoise.js'></script>
-    <script src='https://jeromeetienne.github.io/threex.terrain/threex.terrain.js'></script>
+    <script src='https://jeromeetienne.github.io/threex.terrain/threex.terrain.js'></script> -->
     <script src="./js/app.js"></script>
 </body>
 
