--- a/public/index.html
+++ b/public/index.html
@@ -36,10 +36,10 @@
                             </a>
                         </li>
                     </ul>
-                    <a class="px-5 pt-2 pb-3  rounded-full text-sm border border-ai-white-300 hover:opacity-80 active:opacity-60 text-white  ml-auto" href="#">
+                    <a class="px-5 pt-2 pb-3  rounded-full text-sm border border-ai-white-300 hover:opacity-80 active:opacity-60 text-white  ml-auto md:ml-0" href="#">
                         Log in
                     </a>
-                    <button class="flex items-center ml-6">
+                    <button class="flex md:hidden items-center ml-6">
                         <img src="./img/menu-icon.svg" alt="">
                     </button>
                 </div>
@@ -58,7 +58,7 @@
                         intelligence and drive your business forward
                     </p>
                     <button
-                        class="pt-3 pb-3 px-6 border border-ai-white-300 hover:opacity-80 active:opacity-60  rounded-full text-white  bg-btn-gradient cursor-pointer w-full ">Contact
+                        class="pt-3 pb-3 px-6 border border-ai-white-300 hover:opacity-80 active:opacity-60  rounded-full text-white  bg-btn-gradient cursor-pointer w-full md:w-auto ">Contact
                         Us</button>
                   
                 </div>
