--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div style="background-image: url(./img/hero-bg.png);" id="site-header"  class=" w-full bg-cover      bg-ai-custom-blue">
         <div class="  w-full z-50 bg-hero-bg ">
             <header  class="py-6 w-full relative ">
-                <div class="bg-ai-pink-blur -z-10 w-72 h-72 absolute top-0 right-0 blur-pink">
+                <div class="bg-ai-pink-blur z-0 w-72 h-72 absolute top-0 right-0 blur-pink">
                 </div>
                 <div class="max-w-[1240px] mx-auto px-5 w-full  flex items-center md:justify-between">
                     <a href="#" class="flex hover:opacity-80 active:opacity-60">
@@ -47,7 +47,7 @@
             <section class="w-full  md:pt-24 pt-8 md:pb-72 pb-0">
                 <div class="max-w-[1240px] mx-auto px-5 text-left md:text-center relative  ">
                     <div
-                        class="bg-ai-blue-blur -translate-x-1/2 -translate-y-1/2  w-72 h-72 absolute top-1/2 left-1/2 blur-pink -z-20">
+                        class="bg-ai-blue-blur -translate-x-1/2 -translate-y-1/2  w-72 h-72 absolute top-1/2 left-1/2 blur-pink z-0">
                     </div>
                     <p class="font-medium md:text-base leading-5 text-white md:mb-4 mb-3 text-sm">Explore the power of AI</p>
                     <h1 class="md:font-semibold font-light md:text-53 text-3xl  text-white opacity-90 md:mb-5 mb-4"><strong class="md:font-extrabold font-semibold">Power
@@ -58,7 +58,7 @@
                         intelligence and drive your business forward
                     </p>
                     <button
-                        class="pt-3 pb-3 px-6 border border-ai-white-300 hover:opacity-80 active:opacity-60  rounded-full text-white  bg-btn-gradient cursor-pointer w-full md:w-auto ">Contact
+                        class="pt-3 cursor-pointer pb-3 px-6 border border-ai-white-300 hover:opacity-80 active:opacity-60  rounded-full text-white  bg-btn-gradient  w-full md:w-auto relative z-10">Contact
                         Us</button>
                   
                 </div>
